[project]
name = "prefect-cloud"
version = "0.1.0"
description = "Package for deploying on Prefect Cloud"
readme = "README.md"
authors = [
    { name = "Prefect Technologies, Inc.", email = "help@prefect.io"}
]
requires-python = ">=3.12"
dependencies = [
    "prefect>=3.1.14",
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.6",
    "rich>=13.9.4",
    "typer>=0.13.1",
    "typing-extensions>=4.12.2",
]

[project.scripts]
prefect-cloud = "prefect_cloud:cli.app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-asyncio>=0.25.3",
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = [
    "tests",
]
