[project]
name = "prefect-cloud"
dynamic = ["version"]
description = "Package for easily deploying to Prefect Cloud."
readme = "README.md"
authors = [{ name = "Prefect Technologies, Inc.", email = "help@prefect.io" }]

requires-python = ">=3.10"
dependencies = [
    "pydantic-settings>2.2.1,<3.0.0,!=2.9.0",
    "pydantic>=2.10.1,<3.0.0,!=2.11.0,!=2.11.1,!=2.11.2,!=2.11.3,!=2.11.4",
    "rich>=11.0,<15.0",
    "typer>=0.16.0,<0.22.0",
    "typing-extensions>=4.10.0,<5.0.0",
    "uv>=0.5.26",
    "tzlocal>=5.2",
    "httpx>=0.23,!=0.23.2",
    "pydantic-extra-types>=2.8.2,<3.0.0",
    "toml>=0.10.0",
    "griffe>=0.49.0,<2.0.0",
    "readchar>=4.0.0,<5.0.0",
    "croniter>=6.0.0",
    "websockets>=15.0.1,<17.0",
    "cachetools>=5.3,<8.0",
]

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "pre-commit>=4.1.0",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.4",
    "respx>=0.22.0",
    "ruff>=0.9.4",
    "types-toml>=0.10.8.20240310",
    "types-tzlocal>=5.1.0.1",
    "types-croniter>=5.0.1.20241205",
    "pytest-env>=1.1.5",
]

[project.scripts]
prefect-cloud = "prefect_cloud.cli.root:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
env = ["CLOUD_ENV=prd"]
